[project]
name = "QuickGraphLib"
description = "A scientific graphing library for QtQuick"
readme = "README.md"
license = { file = "LICENCE" }
authors = [{ name = "Matthew Joyce", email = "matthew.joyce@refeyn.com" }]
dependencies = ["PySide6", "contourpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Multimedia :: Graphics :: Presentation",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
]
dynamic = ["version"]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/refeyn/QuickGraphLib"
Issues = "https://github.com/refeyn/QuickGraphLib/issues"
Documentation = "https://refeyn.github.io/QuickGraphLib"
Source = "https://github.com/refeyn/QuickGraphLib"

[project.optional-dependencies]
analyse = [
    # Building
    "scikit-build-core",
    "shiboken6_generator==6.7.2",
    "PySide6==6.7.2",
    "setuptools_scm",
]

[build-system]
requires = ["scikit-build-core", "shiboken6_generator==6.7.2", "PySide6==6.7.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["QuickGraphLib/_version.py"]
sdist.exclude = [".github", ".vscode", "docs", "examples"]

[tool.scikit-build.cmake.define]
INSTALL_SUBPATH = "."

[tool.setuptools_scm]
write_to = "QuickGraphLib/_version.py"

[tool.cibuildwheel]
build = "cp3{9,10,11,12}-win_amd64"
before-all = "python ci/setup_qt.py"
repair-wheel-command = ""
build-frontend = "build"

[tool.cibuildwheel.environment]
SKBUILD_CMAKE_DEFINE = "CMAKE_PREFIX_PATH=\"$(python ci/find_qt.py)/lib/cmake\""
PIP_EXTRA_INDEX_URL = "https://download.qt.io/official_releases/QtForPython/"

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.isort]
profile = "black"
force_alphabetical_sort_within_sections = true
combine_as_imports = true
